button alignment is fixed

--- a/src/index.css
+++ b/src/index.css
@@ -977,7 +977,7 @@ background-color: #0f4e92;
   .secondInputDiv > button {
     position: absolute;
     right: 0;
-    margin-right: 30px;
+    margin-right: 12px;
     border: none;
     margin-top: 10px;
     padding:  6px 10px;
